Fixed Alignment of footer

--- a/Contract Work/RTTDW React/rttdw-react/src/Footer/Footer.css
+++ b/Contract Work/RTTDW React/rttdw-react/src/Footer/Footer.css
@@ -7,9 +7,21 @@
   bottom: 0;
   z-index: 5000;
   box-shadow: 0 -2px #ccc;
+  display: flex;
+  justify-content: space-between;
+}
+.Icons, .Copyright {
   display: inline-block;
+  margin-top: 10px;
 }
 
+.Copyright {
+  margin-left: 10px;
+}
+
+.Icons {
+  margin-right: 10px;
+}
 .github {
   height: 30px;
 }
